SchemaML: rebuild lexer